--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "graded-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hribu.github.io/LearningReact_PortfolioDemo/",
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
@@ -26,7 +27,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "browserslist": {
     "production": [
@@ -41,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "prettier": "^2.7.1"
   }
 }
